feat: ability to select documents/collections from the list
Refs: #171
